diploma_python_data_scrapping/antlr4_python/DebateGrammarParser.py
# Generated from DebateGrammar.g4 by ANTLR 4.12.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class DebateGrammarParser ( Parser ):

    grammarFileName = "DebateGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'\\u03A0\\u0399\\u039D\\u0391\\u039A\\u0391\\u03A3 \\u03A0\\u0395\\u03A1\\u0399\\u0395\\u03A7\\u039F\\u039C\\u0395\\u039D\\u03A9\\u039D'", 
                     "'\\u03A0\\u03A1\\u039F\\u0395\\u0394\\u03A1\\u039F\\u03A3'", 
                     "'\\u03A0\\u03A1\\u039F\\u0395\\u0394\\u03A1\\u0395\\u03A5\\u03A9\\u039D'", 
                     "'\\u039F\\u039C\\u0399\\u039B\\u0397\\u03A4\\u0395\\u03A3'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'('", "')'", "<INVALID>", "<INVALID>", 
                     "'.'", "','", "'\\u0027'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "THEMATA_SPACES", "SUBJECT_BASIC_CATEGORY", 
                      "SUBJECT_", "PROED", "SIMIOSI", "SPEAKER_CATEG_DETAIL", 
                      "EPI", "PAREMVASEIS", "NAME", "PRAKTIKA_BOULIS", "PERIODOS", 
                      "ANATH_BOULI", "DIMOKRATIA", "SUNDEDRIASI", "SUNODOS", 
                      "SUNODOS_NUM", "TMIMA_DIAKOPIS", "THEROS", "DATE", 
                      "NUMBER", "NUMBER_WITH_DOT", "LEFT_PARENTHESIS", "RIGHT_PARENTHESIS", 
                      "PAGE", "WORD", "DOT", "COMMA", "TONE", "BIG_LETTER", 
                      "SMALL_GREEK_LETTER", "ROMAN_NUMERAL", "ROMAN_NUMERAL_SMALL", 
                      "ANY_TEXT_DOT", "ANY_TEXT", "ANY_TEXT_SPACE", "ANY_TEXT_COMMA", 
                      "ANY_TEXT_C", "WS" ]

    RULE_start = 0
    RULE_simiosi = 1
    RULE_table_of_contents = 2
    RULE_periexomena = 3
    RULE_subjects = 4
    RULE_subjects_category = 5
    RULE_subject = 6
    RULE_proedros = 7
    RULE_proedros_name = 8
    RULE_proedreuontes = 9
    RULE_proedreuontes_ = 10
    RULE_proedreuontes_name = 11
    RULE_speakers = 12
    RULE_speaker_detail = 13
    RULE_speakers_name = 14
    RULE_parliament_proceedings = 15
    RULE_parliament_detail = 16
    RULE_anatheoritiki_bouli = 17
    RULE_period_detail = 18
    RULE_dimokratia = 19
    RULE_sunodos = 20
    RULE_ergasies = 21
    RULE_sunedriasi = 22
    RULE_date = 23

    ruleNames =  [ "start", "simiosi", "table_of_contents", "periexomena", 
                   "subjects", "subjects_category", "subject", "proedros", 
                   "proedros_name", "proedreuontes", "proedreuontes_", "proedreuontes_name", 
                   "speakers", "speaker_detail", "speakers_name", "parliament_proceedings", 
                   "parliament_detail", "anatheoritiki_bouli", "period_detail", 
                   "dimokratia", "sunodos", "ergasies", "sunedriasi", "date" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    THEMATA_SPACES=5
    SUBJECT_BASIC_CATEGORY=6
    SUBJECT_=7
    PROED=8
    SIMIOSI=9
    SPEAKER_CATEG_DETAIL=10
    EPI=11
    PAREMVASEIS=12
    NAME=13
    PRAKTIKA_BOULIS=14
    PERIODOS=15
    ANATH_BOULI=16
    DIMOKRATIA=17
    SUNDEDRIASI=18
    SUNODOS=19
    SUNODOS_NUM=20
    TMIMA_DIAKOPIS=21
    THEROS=22
    DATE=23
    NUMBER=24
    NUMBER_WITH_DOT=25
    LEFT_PARENTHESIS=26
    RIGHT_PARENTHESIS=27
    PAGE=28
    WORD=29
    DOT=30
    COMMA=31
    TONE=32
    BIG_LETTER=33
    SMALL_GREEK_LETTER=34
    ROMAN_NUMERAL=35
    ROMAN_NUMERAL_SMALL=36
    ANY_TEXT_DOT=37
    ANY_TEXT=38
    ANY_TEXT_SPACE=39
    ANY_TEXT_COMMA=40
    ANY_TEXT_C=41
    WS=42

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.12.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parliament_proceedings(self):
            return self.getTypedRuleContext(DebateGrammarParser.Parliament_proceedingsContext,0)


        def simiosi(self):
            return self.getTypedRuleContext(DebateGrammarParser.SimiosiContext,0)


        def table_of_contents(self):
            return self.getTypedRuleContext(DebateGrammarParser.Table_of_contentsContext,0)


        def subjects(self):
            return self.getTypedRuleContext(DebateGrammarParser.SubjectsContext,0)


        def proedros(self):
            return self.getTypedRuleContext(DebateGrammarParser.ProedrosContext,0)


        def proedreuontes(self):
            return self.getTypedRuleContext(DebateGrammarParser.ProedreuontesContext,0)


        def speakers(self):
            return self.getTypedRuleContext(DebateGrammarParser.SpeakersContext,0)


        def getRuleIndex(self):
            return DebateGrammarParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)




    def start(self):

        localctx = DebateGrammarParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==9:
                self.state = 48
                self.simiosi()


            self.state = 52
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 11436034) != 0):
                self.state = 51
                self.table_of_contents()


            self.state = 55
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 54
                self.subjects()


            self.state = 58
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2 or _la==3:
                self.state = 57
                self.proedros()


            self.state = 61
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 60
                self.proedreuontes()


            self.state = 64
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 63
                self.speakers()


            self.state = 66
            self.parliament_proceedings()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SimiosiContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SIMIOSI(self):
            return self.getToken(DebateGrammarParser.SIMIOSI, 0)

        def getRuleIndex(self):
            return DebateGrammarParser.RULE_simiosi

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimiosi" ):
                listener.enterSimiosi(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimiosi" ):
                listener.exitSimiosi(self)




    def simiosi(self):

        localctx = DebateGrammarParser.SimiosiContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_simiosi)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(DebateGrammarParser.SIMIOSI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Table_of_contentsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def periexomena(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DebateGrammarParser.PeriexomenaContext)
            else:
                return self.getTypedRuleContext(DebateGrammarParser.PeriexomenaContext,i)


        def getRuleIndex(self):
            return DebateGrammarParser.RULE_table_of_contents

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTable_of_contents" ):
                listener.enterTable_of_contents(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTable_of_contents" ):
                listener.exitTable_of_contents(self)




    def table_of_contents(self):

        localctx = DebateGrammarParser.Table_of_contentsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_table_of_contents)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 70
                self.periexomena()
                self.state = 73 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 11436034) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PeriexomenaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def period_detail(self):
            return self.getTypedRuleContext(DebateGrammarParser.Period_detailContext,0)


        def dimokratia(self):
            return self.getTypedRuleContext(DebateGrammarParser.DimokratiaContext,0)


        def sunodos(self):
            return self.getTypedRuleContext(DebateGrammarParser.SunodosContext,0)


        def sunedriasi(self):
            return self.getTypedRuleContext(DebateGrammarParser.SunedriasiContext,0)


        def ergasies(self):
            return self.getTypedRuleContext(DebateGrammarParser.ErgasiesContext,0)


        def date(self):
            return self.getTypedRuleContext(DebateGrammarParser.DateContext,0)


        def getRuleIndex(self):
            return DebateGrammarParser.RULE_periexomena

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPeriexomena" ):
                listener.enterPeriexomena(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPeriexomena" ):
                listener.exitPeriexomena(self)




    def periexomena(self):

        localctx = DebateGrammarParser.PeriexomenaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_periexomena)
        try:
            self.state = 82
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 75
                self.match(DebateGrammarParser.T__0)
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 2)
                self.state = 76
                self.period_detail()
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 3)
                self.state = 77
                self.dimokratia()
                pass
            elif token in [19]:
                self.enterOuterAlt(localctx, 4)
                self.state = 78
                self.sunodos()
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 5)
                self.state = 79
                self.sunedriasi()
                pass
            elif token in [21]:
                self.enterOuterAlt(localctx, 6)
                self.state = 80
                self.ergasies()
                pass
            elif token in [23]:
                self.enterOuterAlt(localctx, 7)
                self.state = 81
                self.date()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SubjectsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def THEMATA_SPACES(self):
            return self.getToken(DebateGrammarParser.THEMATA_SPACES, 0)

        def subjects_category(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DebateGrammarParser.Subjects_categoryContext)
            else:
                return self.getTypedRuleContext(DebateGrammarParser.Subjects_categoryContext,i)


        def getRuleIndex(self):
            return DebateGrammarParser.RULE_subjects

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubjects" ):
                listener.enterSubjects(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubjects" ):
                listener.exitSubjects(self)




    def subjects(self):

        localctx = DebateGrammarParser.SubjectsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_subjects)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(DebateGrammarParser.THEMATA_SPACES)
            self.state = 86 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 85
                self.subjects_category()
                self.state = 88 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 274877907136) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Subjects_categoryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SUBJECT_BASIC_CATEGORY(self):
            return self.getToken(DebateGrammarParser.SUBJECT_BASIC_CATEGORY, 0)

        def subject(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DebateGrammarParser.SubjectContext)
            else:
                return self.getTypedRuleContext(DebateGrammarParser.SubjectContext,i)


        def getRuleIndex(self):
            return DebateGrammarParser.RULE_subjects_category

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubjects_category" ):
                listener.enterSubjects_category(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubjects_category" ):
                listener.exitSubjects_category(self)




    def subjects_category(self):

        localctx = DebateGrammarParser.Subjects_categoryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_subjects_category)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==6:
                self.state = 90
                self.match(DebateGrammarParser.SUBJECT_BASIC_CATEGORY)


            self.state = 94 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 93
                    self.subject()

                else:
                    raise NoViableAltException(self)
                self.state = 96 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SubjectContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SUBJECT_(self):
            return self.getToken(DebateGrammarParser.SUBJECT_, 0)

        def ANY_TEXT(self):
            return self.getToken(DebateGrammarParser.ANY_TEXT, 0)

        def getRuleIndex(self):
            return DebateGrammarParser.RULE_subject

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubject" ):
                listener.enterSubject(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubject" ):
                listener.exitSubject(self)




    def subject(self):

        localctx = DebateGrammarParser.SubjectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_subject)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            _la = self._input.LA(1)
            if not(_la==7 or _la==38):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProedrosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def proedros_name(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DebateGrammarParser.Proedros_nameContext)
            else:
                return self.getTypedRuleContext(DebateGrammarParser.Proedros_nameContext,i)


        def getRuleIndex(self):
            return DebateGrammarParser.RULE_proedros

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProedros" ):
                listener.enterProedros(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProedros" ):
                listener.exitProedros(self)




    def proedros(self):

        localctx = DebateGrammarParser.ProedrosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_proedros)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            _la = self._input.LA(1)
            if not(_la==2 or _la==3):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 102 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 101
                self.proedros_name()
                self.state = 104 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==13):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Proedros_nameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(DebateGrammarParser.NAME, 0)

        def getRuleIndex(self):
            return DebateGrammarParser.RULE_proedros_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProedros_name" ):
                listener.enterProedros_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProedros_name" ):
                listener.exitProedros_name(self)




    def proedros_name(self):

        localctx = DebateGrammarParser.Proedros_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_proedros_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(DebateGrammarParser.NAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProedreuontesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def proedreuontes_(self):
            return self.getTypedRuleContext(DebateGrammarParser.Proedreuontes_Context,0)


        def proedreuontes_name(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DebateGrammarParser.Proedreuontes_nameContext)
            else:
                return self.getTypedRuleContext(DebateGrammarParser.Proedreuontes_nameContext,i)


        def getRuleIndex(self):
            return DebateGrammarParser.RULE_proedreuontes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProedreuontes" ):
                listener.enterProedreuontes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProedreuontes" ):
                listener.exitProedreuontes(self)




    def proedreuontes(self):

        localctx = DebateGrammarParser.ProedreuontesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_proedreuontes)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.proedreuontes_()
            self.state = 110 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 109
                self.proedreuontes_name()
                self.state = 112 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==13):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Proedreuontes_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROED(self):
            return self.getToken(DebateGrammarParser.PROED, 0)

        def getRuleIndex(self):
            return DebateGrammarParser.RULE_proedreuontes_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProedreuontes_" ):
                listener.enterProedreuontes_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProedreuontes_" ):
                listener.exitProedreuontes_(self)




    def proedreuontes_(self):

        localctx = DebateGrammarParser.Proedreuontes_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_proedreuontes_)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(DebateGrammarParser.PROED)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Proedreuontes_nameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(DebateGrammarParser.NAME, 0)

        def getRuleIndex(self):
            return DebateGrammarParser.RULE_proedreuontes_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProedreuontes_name" ):
                listener.enterProedreuontes_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProedreuontes_name" ):
                listener.exitProedreuontes_name(self)




    def proedreuontes_name(self):
